--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
   "dependencies": {
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.15",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.3.5"
   }
 }
