--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
-    "typescript": "^4.3.5"
+    "babel-loader": "^8.2.2",
+    "html-webpack-plugin": "^5.3.2",
+    "typescript": "^4.3.5",
+    "webpack": "^5.47.1",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
