--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React + Typescript + Webpack template without CRA",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve --config webpack/webpack.config.ts --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +27,7 @@
     "@babel/preset-env": "^7.14.8",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@babel/register": "^7.14.5",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
