--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React + Typescript + Webpack template without CRA",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.ts --open",
+    "start": "webpack serve --config webpack/webpack.config.ts --env env=dev --open",
+    "build": "webpack --config webpack/webpack.config.ts --env env=prod --open",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -37,6 +38,7 @@
     "typescript": "^4.3.5",
     "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.8.0"
   }
 }
