--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.ts --env env=dev --open",
-    "build": "webpack --config webpack/webpack.config.ts --env env=prod --open",
+    "build": "webpack --config webpack/webpack.config.ts --env env=prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
