--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@babel/register": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "react-refresh": "^0.10.0",
     "style-loader": "^3.2.1",
     "typescript": "^4.3.5",
     "webpack": "^5.47.1",
