--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React + Typescript + Webpack template without CRA",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.ts --env env=dev --open",
+    "start": "webpack serve --config webpack/webpack.config.ts --env env=dev",
     "build": "webpack --config webpack/webpack.config.ts --env env=prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
